--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block title %}Recipe Book{% endblock %}
 {% block content %}
-    <h2>{{name}}</h2>
+    <h2>{{recipe}}</h2>
     <u1>
-        {% for item in ingredients%}
-            <li>{{ item.name}} - {{ item.quantity }}</li>
-        {% endfor %}
+        {% for ingredient in recipe.ingredients.all %}
+        <li>{{ ingredient.ingredient.name }} - {{ ingredient.quantity }}</li> 
+        {% endfor %}            
     </u1>
 {% endblock %}
